--- a/manifest-admin.json
+++ b/manifest-admin.json
@@ -2,7 +2,8 @@
   "name": "لوحة المدير - ملاعب سفاري",
   "short_name": "لوحة المدير",
   "description": "لوحة التحكم الإدارية لإدارة حجوزات ملاعب سفاري",
-  "start_url": "/admin.html",
+  "start_url": "./admin.html",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#10b981",
